@@ -2,6 +2,7 @@
 Akeeba Panopticon 1.2.2
 ================================================================================
 + Optional environment variables-only configuration of containerized Panopticon [gh-696]
+~ Do not log CMS Update Found more than once per version
 # [LOW] Wrong lang string used in WordPress plugin/theme update emails
 # [LOW] PHP warnings running Connection Doctor on WordPress sites
 
